--- a/app/src/main/res/layout/fragment_transactionsk.xml
+++ b/app/src/main/res/layout/fragment_transactionsk.xml
@@ -14,6 +14,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tabBackground="@color/colorPrimary"
+            app:tabGravity="fill"
             app:tabIndicatorColor="@color/item_selected_color"
             app:tabIndicatorHeight="4dp"
             app:tabMode="scrollable"
