--- a/app/src/main/res/layout/row_upcoming_transactions.xml
+++ b/app/src/main/res/layout/row_upcoming_transactions.xml
@@ -15,10 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_16"
         android:layout_marginEnd="@dimen/space_16"
-        android:background="@{data.selected ? @drawable/shape_cart_view_selected : @drawable/shape_cart_view}"
+        android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
-        android:padding="@dimen/space_8"
-        tools:background="@drawable/shape_cart_view">
+        android:padding="@dimen/space_8">
 
         <TextView
             android:id="@+id/tvName"
@@ -83,35 +82,6 @@
             app:layout_constraintGuide_percent="0.4" />
 
         <TextView
-            android:id="@+id/tvNAVL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_16"
-            android:text="@string/nav_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@id/gdlCenter"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
-
-        <TextView
-            android:id="@+id/tvNAV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:text="27.50"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toEndOf="@id/tvNAVL"
-            app:layout_constraintTop_toBottomOf="@id/tvName" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/gdlEnd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.7" />
-
-        <TextView
             android:id="@+id/tvFolioL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -119,8 +89,7 @@
             android:text="@string/folio_no_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            app:layout_constraintEnd_toStartOf="@id/tvFolioNo"
-            app:layout_constraintStart_toEndOf="@id/gdlEnd"
+            app:layout_constraintStart_toEndOf="@id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
         <TextView
@@ -129,51 +98,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_16"
-            android:gravity="end"
             android:text="15874"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvFolioL"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
-
-        <TextView
-            android:id="@+id/tvOrderNoL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_16"
-            android:text="@string/order_no_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
-            app:layout_constraintBaseline_toBaselineOf="@id/btnPayNow"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tvOrderNo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="@dimen/space_16"
-            android:text="#15874"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintBaseline_toBaselineOf="@id/btnPayNow"
-            app:layout_constraintStart_toEndOf="@+id/tvOrderNoL" />
-
-        <TextView
-            android:id="@+id/btnPayNow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_16"
-            android:background="@drawable/shape_btn_idle_bg"
-            android:paddingStart="@dimen/space_16"
-            android:paddingTop="@dimen/space_8"
-            android:paddingEnd="@dimen/space_16"
-            android:paddingBottom="@dimen/space_8"
-            android:text="@string/pay_now"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvFolioNo" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
