--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_favorite"
-        android:checkable="true"
-        android:icon="@drawable/delete"
         android:title="@string/select_all"
-        app:actionViewClass="android.widget.CheckBox"
-        app:showAsAction="withText" />
+        app:actionLayout="@layout/delete_option_menu_action_items"
+        app:showAsAction="ifRoom" />
 </menu>
