--- a/app/src/main/res/layout/fragment_portfolio_details.xml
+++ b/app/src/main/res/layout/fragment_portfolio_details.xml
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/space_8"
-                    android:background="@color/darker_gray"
+                    android:background="@color/lighter_gray"
                     app:layout_constraintTop_toBottomOf="@id/tvName" />
 
                 <TextView
@@ -83,8 +83,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="14dp"
                     android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="8dp"
                     android:text="@string/current_value_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/gdlCenter"
                     app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -104,11 +107,13 @@
                     android:id="@+id/tvYDRLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/xirr_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tvDayChangeL"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/gdlEnd"
                     app:layout_constraintTop_toBottomOf="@id/tvName" />
 
                 <TextView
@@ -129,6 +134,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintGuide_percent="0.42" />
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/gdlEnd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.80" />
 
 
             </android.support.constraint.ConstraintLayout>
