--- a/app/src/main/res/layout/row_direct_investment_list_item.xml
+++ b/app/src/main/res/layout/row_direct_investment_list_item.xml
@@ -22,69 +22,136 @@
             android:id="@+id/tvName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="@dimen/space_8"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
             android:minLines="2"
             android:text="@{investment.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tvRedeem"
-            app:layout_constraintEnd_toStartOf="@+id/tvRedeem"
+            app:layout_constraintBaseline_toBaselineOf="@+id/ll_folio"
+            app:layout_constraintEnd_toStartOf="@+id/ll_folio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="SBI Banking and Financial Services Growth Direct Plan" />
 
-        <TextView
-            android:id="@+id/tvRedeem"
+        <android.support.v7.widget.LinearLayoutCompat
+            android:id="@+id/ll_folio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_redeem"
-            android:drawablePadding="@dimen/_4sdp"
-            android:gravity="center"
-            android:text="@string/redeem"
-            android:textColor="@color/colorAccent"
+            android:layout_marginStart="8dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tvDate"
+            <TextView
+                android:id="@+id/tvFolioNoL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/folio_no"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+            <TextView
+                android:id="@+id/tvFolioNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_semibold"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/semi_black"
+                app:price="@{investment.currentValue}"
+                tools:text="@string/dummy3" />
+        </android.support.v7.widget.LinearLayoutCompat>
+
+        <LinearLayout
+            android:id="@+id/ll_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/ll_options"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/ll_options">
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{investment.date}"
+                android:textSize="@dimen/sp10"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="NAV on\n16 Aug, 2018" />
+
+            <TextView
+                android:id="@+id/tvCurrent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_8"
+                android:drawableEnd="@{investment.returns &lt; 0 ? @drawable/ic_arrow_downward_red_24dp:@drawable/ic_arrow_upward_green}"
+                android:drawablePadding="@dimen/space_2"
+                android:fontFamily="@font/lato_semibold"
+                android:text="@{investment.returns + `%`}"
+                android:layout_marginEnd="@dimen/space_8"
+                android:textSize="@dimen/sp10"
+                android:textColor="@android:color/black"
+                tools:drawableEnd="@drawable/ic_arrow_upward_green"
+                tools:text="10.7%" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_space"
-            android:text="@{investment.date}"
-            android:textSize="@dimen/sp10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
-            tools:text="NAV on 16 Aug, 2018" />
+            android:layout_marginTop="@dimen/space_8"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvName">
 
-        <TextView
-            android:id="@+id/tvCurrent"
-            android:layout_width="wrap_content"
-            android:layout_height="17dp"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/default_space"
-            android:drawableEnd="@{investment.returns &lt; 0 ? @drawable/ic_arrow_downward_red_24dp:@drawable/ic_arrow_upward_green}"
-            android:drawablePadding="@dimen/space_2"
-            android:fontFamily="@font/lato_semibold"
-            android:text="@{investment.returns + `%`}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@android:color/black"
-            app:layout_constraintBaseline_toBaselineOf="@id/tvDate"
-            app:layout_constraintStart_toEndOf="@id/tvDate"
-            app:layout_constraintTop_toBottomOf="@+id/tvName"
-            tools:drawableEnd="@drawable/ic_arrow_upward_green"
-            tools:text="10.7%" />
+            <TextView
+                android:id="@+id/tvAddPortfolio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_8"
+                android:layout_marginEnd="@dimen/space_12"
+                android:drawableStart="@drawable/ic_add"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:text="@string/add"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent" />
 
+            <TextView
+                android:id="@+id/tvRedeem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/space_12"
+                android:drawableStart="@drawable/ic_redeem"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:text="@string/redeem"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/tvStopPortfolio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/space_3"
+                android:drawableStart="@drawable/ic_stop"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:text="@string/stop"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent" />
+
+        </LinearLayout>
 
         <View
             android:id="@+id/mDivider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/default_space"
-            android:background="@color/darker_gray"
-            app:layout_constraintTop_toBottomOf="@+id/tvDate" />
-
+            android:background="@color/lighter_gray"
+            app:layout_constraintTop_toBottomOf="@+id/ll_date" />
 
         <TextView
             android:id="@+id/tvLastPriceL"
@@ -113,8 +180,11 @@
             android:layout_width="wrap_content"
             android:layout_height="14dp"
             android:layout_marginTop="@dimen/space_8"
+            android:layout_marginEnd="8dp"
             android:text="@string/current_value_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintEnd_toStartOf="@+id/tvYDRLabel"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/mDivider" />
 
@@ -134,11 +204,13 @@
             android:id="@+id/tvYDRLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="@dimen/space_8"
             android:text="@string/xirr_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvDayChangeL"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/gdlCenterEnd"
             app:layout_constraintTop_toBottomOf="@id/mDivider" />
 
         <TextView
@@ -160,6 +232,12 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.42" />
 
+        <android.support.constraint.Guideline
+            android:id="@+id/gdlCenterEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.80" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
