--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -25,49 +25,23 @@
             android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
             android:text="@{investment.name}"
-            android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/cbStartStop"
-            app:layout_constraintEnd_toStartOf="@+id/tvEdit"
+            android:textColor="@color/item_selected_color"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Home Goal" />
-
-        <TextView
-            android:id="@+id/tvEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/space_8"
-            android:drawableStart="@drawable/ic_redeem"
-            android:drawablePadding="@dimen/_4sdp"
-            android:gravity="center"
-            android:text="@string/redeem"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="@+id/cbStartStop"
-            app:layout_constraintEnd_toStartOf="@id/cbStartStop"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <CheckBox
-            android:id="@+id/cbStartStop"
-            android:layout_width="68dp"
-            android:layout_height="wrap_content"
-            android:buttonTint="@color/colorAccent"
-            android:checked="@={investment.start}"
-            android:text="@{investment.start ? @string/start : @string/stop}"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:checked="false"
-            tools:text="@string/stop" />
 
         <TextView
             android:id="@+id/tvLastPriceL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
+            android:layout_marginEnd="8dp"
             android:text="@string/total_investment_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -88,8 +62,11 @@
             android:layout_width="wrap_content"
             android:layout_height="14dp"
             android:layout_marginTop="@dimen/default_space"
+            android:layout_marginEnd="8dp"
             android:text="@string/current_value_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintEnd_toStartOf="@+id/tvFolioNoL"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -105,6 +82,33 @@
             app:price="@{investment.currentValue}"
             tools:text="@string/dummy3" />
 
+        <TextView
+            android:layout_marginStart="8dp"
+            android:id="@+id/tvFolioNoL"
+            android:layout_width="wrap_content"
+            android:layout_height="14dp"
+            android:layout_marginTop="@dimen/default_space"
+            android:text="@string/folio_no"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/gdlEnd"
+            app:layout_constraintTop_toBottomOf="@id/tvName" />
+
+        <TextView
+            android:id="@+id/tvFolioNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lato_semibold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/semi_black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/tvFolioNoL"
+            app:layout_constraintTop_toBottomOf="@+id/tvFolioNoL"
+            app:price="@{investment.currentValue}"
+            tools:text="@string/dummy3" />
+
         <android.support.constraint.Guideline
             android:id="@+id/gdlCenter"
             android:layout_width="wrap_content"
@@ -112,6 +116,59 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.42" />
 
+        <android.support.constraint.Guideline
+            android:id="@+id/gdlEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.80" />
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/space_16"
+            app:layout_constraintTop_toBottomOf="@+id/tvLastPrice"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvAddPortfolio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/space_12"
+                android:drawableStart="@drawable/ic_add"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:text="@string/add"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent"/>
+
+            <TextView
+                android:id="@+id/tvRedeem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/space_12"
+                android:drawableStart="@drawable/ic_redeem"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:text="@string/redeem"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent"/>
+
+            <TextView
+                android:id="@+id/tvStopPortfolio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/space_12"
+                android:drawableStart="@drawable/ic_stop"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:text="@string/stop"
+                android:textColor="@color/colorAccent"/>
+
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
