--- a/app/src/main/res/layout/row_transcation_status.xml
+++ b/app/src/main/res/layout/row_transcation_status.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/imgStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_round_completed"
+                imgUrl="@{widget.actualStatusIcon}"
                 tools:text="SBI Banking and Financial Services Growth Direct Plan" />
 
             <View
@@ -78,15 +78,18 @@
 
         <TextView
             android:id="@+id/tvStatus"
-            android:layout_width="0dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/shape_pending_bg"
+            background="@{widget.actualStatusDrawable}"
             android:paddingStart="@dimen/space_12"
             android:paddingTop="@dimen/space_4"
             android:paddingEnd="@dimen/space_12"
+            android:gravity="center"
+            tools:text="In Progress"
+            android:elevation="@dimen/space_2"
             android:paddingBottom="@dimen/space_4"
-            android:text="Pending"
+            android:text="@{widget.actualStatus}"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
