--- a/app/src/main/res/layout/fragment_payment_mode.xml
+++ b/app/src/main/res/layout/fragment_payment_mode.xml
@@ -197,7 +197,9 @@
                     android:layout_height="@dimen/space_1"
                     android:background="@color/lighter_gray"/>
 
+
                 <TextView
+                    android:id="@+id/tvIntro"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
