--- a/app/src/main/res/layout/row_goal_based_investment_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_list_item.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/space_8"
-            android:background="@color/darker_gray"
+            android:background="@color/lighter_gray"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
         <TextView
