--- a/app/src/main/res/layout/row_upcoming_transactions.xml
+++ b/app/src/main/res/layout/row_upcoming_transactions.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:minWidth="72dp"
+            android:minWidth="@dimen/_64sdp"
             android:text="@string/dummy3"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
