--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="vm"
             type="com.tarrakki.module.account.AccountVM" />
@@ -74,11 +76,27 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@color/white" />
 
+                    <Button
+                        android:id="@+id/btnContinue"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/default_space"
+                        android:background="@drawable/shape_btn_idle_bg"
+                        android:fontFamily="@font/lato_bold"
+                        android:text="@string/txtcontinue"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:visibility="@{vm.btnComleteRegion? View.VISIBLE : View.GONE}"
+                        tools:visibility="visible" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_12"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="@{vm.btnComleteRegion? View.GONE : View.VISIBLE}"
+                        tools:visibility="gone">
 
                         <EditText
                             android:id="@+id/edtPanNo"
