--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="vm"
             type="com.tarrakki.module.ekyc.KYCRegistrationAVM" />
@@ -140,7 +142,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tvPAN" />
 
 
-                <!--<TextView
+                <TextView
                     android:id="@+id/tvEmailID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -155,7 +157,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
+                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
+                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/email_id"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -163,7 +167,7 @@
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
-                    android:text="@={vm.email}"
+                    android:text="@={kycData.email}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
@@ -171,6 +175,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvEmailID" />
 
+                <!-- <ImageView
+                     android:id="@+id/ivEmailVerified"
+                     android:layout_width="@dimen/_16sdp"
+                     android:layout_height="@dimen/_16sdp"
+                     android:layout_marginEnd="16dp"
+                     android:src="@drawable/ic_succeeded"
+                     android:visibility="@{vm.ivEmailVerifiedVisibility ? View.VISIBLE : View.GONE}"
+                     app:layout_constraintBottom_toBottomOf="@id/edtEmail"
+                     app:layout_constraintEnd_toEndOf="@id/edtEmail"
+                     app:layout_constraintTop_toTopOf="@id/edtEmail" />-->
 
                 <TextView
                     android:id="@+id/tvMobile"
@@ -187,7 +201,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
+                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
+                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/mobile_number"
                     android:inputType="number"
                     android:maxLength="10"
@@ -196,14 +212,14 @@
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
-                    android:text="@={vm.mobile}"
+                    android:text="@={kycData.mobile}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvMobile" />
--->
+
                 <TextView
                     android:id="@+id/tvGuardian"
                     android:layout_width="0dp"
@@ -216,7 +232,7 @@
                     app:layout_constraintEnd_toStartOf="@id/tvGuardianPAN"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtDOB"
+                    app:layout_constraintTop_toBottomOf="@id/edtMobile"
                     tools:visibility="gone" />
 
                 <EditText
@@ -257,7 +273,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/tvGuardian"
-                    app:layout_constraintTop_toBottomOf="@id/edtPAN"
+                    app:layout_constraintTop_toBottomOf="@id/edtMobile"
                     tools:visibility="gone" />
 
                 <EditText
