--- a/app/src/main/res/layout/fragment_kycregistration_b.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_b.xml
@@ -117,68 +117,66 @@
                     app:layout_constraintStart_toEndOf="@id/edtPAN"
                     app:layout_constraintTop_toBottomOf="@id/tvPAN" />-->
 
+                <TextView
+                    android:id="@+id/tvCountryL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/country_of_birth"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edtPAN" />
 
-                <!-- <TextView
-                     android:id="@+id/tvCountryL"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="@dimen/default_space"
-                     android:text="@string/country_of_birth"
-                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                     app:layout_constraintHorizontal_weight="1"
-                     app:layout_constraintStart_toStartOf="parent"
-                     app:layout_constraintTop_toBottomOf="@id/edtPAN" />
-
-                 <EditText
-                     android:id="@+id/edtCountry"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="@dimen/space_4"
-                     android:background="@drawable/shape_edt_gray_round"
-                     android:hint="@string/enter_country_of_birth"
-                     android:inputType="textCapSentences"
-                     android:maxLines="1"
-                     android:paddingStart="@dimen/default_space"
-                     android:paddingTop="@dimen/space_8"
-                     android:paddingEnd="@dimen/default_space"
-                     android:paddingBottom="@dimen/space_8"
-                     android:text="@={vm.countryOfBirth}"
-                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                     android:textColor="@color/black"
-                     android:textColorHint="@color/darker_gray"
-                     app:layout_constraintTop_toBottomOf="@id/tvCountryL" />
+                <TextView
+                    android:id="@+id/edtCountry"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@drawable/shape_edt_gray_round"
+                    android:hint="@string/enter_country_of_birth"
+                    android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={kycData.birthCountry}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintTop_toBottomOf="@id/tvCountryL" />
 
 
-                 <TextView
-                     android:id="@+id/tvCityL"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="@dimen/default_space"
-                     android:text="@string/place_of_birth"
-                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                     app:layout_constraintHorizontal_weight="1"
-                     app:layout_constraintStart_toStartOf="parent"
-                     app:layout_constraintTop_toBottomOf="@id/edtCountry" />
+                <TextView
+                    android:id="@+id/tvCityL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/place_of_birth"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edtCountry" />
 
-                 <EditText
-                     android:id="@+id/edtCity"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="@dimen/space_4"
-                     android:background="@drawable/shape_edt_gray_round"
-                     android:hint="@string/enter_place_of_birth"
-                     android:inputType="textCapSentences"
-                     android:maxLines="1"
-                     android:paddingStart="@dimen/default_space"
-                     android:paddingTop="@dimen/space_8"
-                     android:paddingEnd="@dimen/default_space"
-                     android:paddingBottom="@dimen/space_8"
-                     android:text="@={vm.placeOfBirth}"
-                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                     android:textColor="@color/black"
-                     android:textColorHint="@color/darker_gray"
-                     app:layout_constraintTop_toBottomOf="@id/tvCityL" />
- -->
+                <EditText
+                    android:id="@+id/edtCity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@drawable/shape_edt_gray_round"
+                    android:hint="@string/enter_place_of_birth"
+                    android:inputType="textCapSentences"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={kycData.birthPlace}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintTop_toBottomOf="@id/tvCityL" />
+
                 <TextView
                     android:id="@+id/tvSourceIncomeL"
                     android:layout_width="0dp"
@@ -191,7 +189,7 @@
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtPAN" />
+                    app:layout_constraintTop_toBottomOf="@id/edtCity" />
 
                 <TextView
                     android:id="@+id/edtSourceIncome"
@@ -228,7 +226,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/tvSourceIncomeL"
-                    app:layout_constraintTop_toBottomOf="@id/edtPAN" />
+                    app:layout_constraintTop_toBottomOf="@id/edtCity" />
 
                 <TextView
                     android:id="@+id/edtIncomeSlab"
@@ -292,7 +290,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:checked="true" />
 
-                <TextView
+                <!--<TextView
                     android:id="@+id/tvTIN"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -535,7 +533,7 @@
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/edtTIN2"
                     app:layout_constraintTop_toBottomOf="@id/tvIssue2" />
-
+-->
                 <Button
                     android:id="@+id/btnNext"
                     android:layout_width="match_parent"
@@ -549,7 +547,7 @@
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtIssue2" />
+                    app:layout_constraintTop_toBottomOf="@id/tvCertificate" />
 
             </android.support.constraint.ConstraintLayout>
 
