--- a/app/src/main/res/layout/fragment_transactionsk.xml
+++ b/app/src/main/res/layout/fragment_transactionsk.xml
@@ -17,7 +17,7 @@
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/item_selected_color"
             app:tabIndicatorHeight="4dp"
-            app:tabMode="scrollable"
+            app:tabMode="fixed"
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextAppearance="@style/tab_text"
             app:tabTextColor="@color/home_title_color" />
