1 Implemented Complete Registration in Live environment. 2 Implemented Complete Registration flow testing.

--- a/app/src/main/res/layout/fragment_kycregistration_b.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_b.xml
@@ -71,7 +71,7 @@
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
-                    android:text="@={kycData.nameOfPANHolder}"
+                    android:text="@{kycData.nameOfPANHolder}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
@@ -140,7 +140,6 @@
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
-                    android:text="@={kycData.birthCountry}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
