--- a/app/src/main/res/layout/row_transaction_confirm.xml
+++ b/app/src/main/res/layout/row_transaction_confirm.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="widget"
-            type="com.tarrakki.module.transactionConfirm.TransactionConfirmVM.TransactionConfirm" />
+            type="com.tarrakki.api.model.TransactionStatus" />
 
         <variable
             name="isExpanded"
@@ -33,10 +33,11 @@
 
             <TextView
                 android:id="@+id/tvName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@id/tvAmount"
-                android:text="@{widget.name}"
+                android:text="@{widget.schemeName}"
+                android:gravity="start"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/item_selected_color"
                 tools:text="SBI Banking and Financial Services Growth Direct Plan" />
@@ -58,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="@dimen/space_8"
-                android:visibility="@{widget.success==true?View.VISIBLE:View.INVISIBLE}"
+                android:visibility="@{widget.isSuccess==true?View.VISIBLE:View.INVISIBLE}"
                 android:src="@{isExpanded ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}" />
 
         </RelativeLayout>
@@ -85,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/space_4"
-                    android:text="@{widget.type}"
+                    android:text="@{widget.orderType.equals('1')==true?@string/sip:@string/lumpsum}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                     android:textColor="@color/darker_gray" />
 
@@ -141,7 +142,7 @@
         </net.cachapa.expandablelayout.ExpandableLayout>
 
         <LinearLayout
-            android:visibility="@{widget.success==false?View.VISIBLE:View.GONE}"
+            android:visibility="@{widget.isSuccess==false?View.VISIBLE:View.GONE}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
@@ -157,7 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/space_4"
-                android:text="Payment Issue"
+                android:text="@{widget.bseRemarks}"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                 android:textColor="@color/darker_gray" />
 
